--- a/css/public.css
+++ b/css/public.css
@@ -1,6 +1,7 @@
-*{
-	margin: 0;
-	font-style: normal;
-	text-decoration: none;
-	list-style: none;
+* {
+    margin: 0;
+    font-style: normal;
+    text-decoration: none;
+    list-style: none;
+    padding: 0;
 }
